# agentic-tello

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bench_test.py  config.py  launch_drone_agent.sh  main.py  pyproject.toml  stop_drone_agent.sh  tools.py
agent/: loop.py  servoing.py  state.py
agentic_tello/: __main__.py  config.py  main.py  tools.py
agentic_tello/agent/: README.md  loop.py  servoing.py
agentic_tello/brain/: README.md  prompts.py  vlm_client.py
agentic_tello/perception/: README.md  bev.py  detector.py  worker.py
agentic_tello/photogrammetry/: README.md  __init__.py  odm.py
agentic_tello/tello_tools/: arbiter.py  controller.py  primitives.py  safety.py
agentic_tello/web/: README.md  server.py
brain/: prompts.py  vlm_client.py
docs/: architecture.excalidraw  cenital-view-model.md  functioning.excalidraw  gen_excalidraw.py  tello-spark-network-setup.md
perception/: README.md  bev.py  detector.py  markers.py  worker.py
photogrammetry/: odm.py
tello_mcp/: README.md  resources.py  server.py
tello_tools/: README.md  arbiter.py  controller.py  primitives.py  safety.py
web/: README.md  server.py
web/static/: index.html
